Support Cygwin platform

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -89,6 +89,11 @@ SARAH_DEP_GEN := @SARAH_DEP_GEN@
 INSTALL_STRIPPED := \
 		$(ABSBASEDIR)/config/install_stripped.sh
 
+# script which replaces path\like\this with path/like/this
+# thereby enabling FlexibleSUSY to run on Cygwin
+CONVERT_DOS_PATHS := \
+		$(ABSBASEDIR)/config/convert_dos_paths.sh
+
 # README file
 README_FILE := $(ABSBASEDIR)/README
 
