--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -74,9 +74,9 @@ ifeq ($(findstring clean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring distclean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring doc-,$(MAKECMDGOALS)),)
 $(DIR)/two_scale_susy.mk: run-metacode-$(MODNAME)
-		@true
+		@$(CONVERT_DOS_PATHS) $@
 $(DIR)/two_scale_soft.mk: run-metacode-$(MODNAME)
-		@true
+		@$(CONVERT_DOS_PATHS) $@
 endif
 endif
 endif
@@ -117,8 +117,10 @@ SCAN_@CLASSNAME@_EXE := $(DIR)/scan_@CLASSNAME@.x
 
 METACODE_STAMP_@CLASSNAME@ := $(DIR)/00_DELETE_ME_TO_RERUN_METACODE
 
+ifeq ($(ENABLE_META),yes)
 SARAH_MODEL_FILES_@CLASSNAME@ := \
 		$(shell $(SARAH_DEP_GEN) $(SARAH_MODEL))
+endif
 
 .PHONY:         all-$(MODNAME) clean-$(MODNAME) clean-$(MODNAME)-src \
 		distclean-$(MODNAME) run-metacode-$(MODNAME)
@@ -179,7 +181,7 @@ run-metacode-$(MODNAME): $(METACODE_STAMP_@CLASSNAME@)
 
 ifeq ($(ENABLE_META),yes)
 $(METACODE_STAMP_@CLASSNAME@): $(DIR)/start.m $(DIR)/FlexibleSUSY.m $(META_SRC) $(TEMPLATES) $(SARAH_MODEL_FILES_@CLASSNAME@)
-		$(MATH) -run "Get[\"$<\"]; Quit[]"
+		"$(MATH)" -run "Get[\"$<\"]; Quit[]"
 		@touch "$(METACODE_STAMP_@CLASSNAME@)"
 		@echo "Note: to regenerate @CLASSNAME@ source files," \
 		      "please remove the file "
