convert symmetric fermion mixings to SLHA convention

--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -189,6 +189,7 @@ double @ModelName@_slha_io::read_scale() const
 
 void @ModelName@_slha_io::convert_to_slha_convention(@ModelName@_physical& physical)
 {
+@convertMixingsToSLHAConvention@
 }
 
 } // namespace flexiblesusy
