adding pack-<model>-src target
By calling pack-<model>-src the source files in the model directory
models/<model>/ will be packed into a tarball for separate
distribution.

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -143,7 +143,9 @@ ifeq ($(ENABLE_COMPILE),yes)
 ifeq ($(findstring clean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring distclean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring doc-,$(MAKECMDGOALS)),)
+ifeq ($(findstring pack-,$(MAKECMDGOALS)),)
 -include $(ALLDEP)
+endif
 endif
 endif
 endif
