do not hard-code the loop order in the debug output comments

--- a/templates/physical.cpp.in
+++ b/templates/physical.cpp.in
@@ -39,11 +39,11 @@ void @ModelName@_physical::clear()
 void @ModelName@_physical::print(std::ostream& ostr) const
 {
    ostr << "----------------------------------------\n"
-           "one-loop pole masses:\n"
+           "pole masses:\n"
            "----------------------------------------\n";
 @printMasses@
    ostr << "----------------------------------------\n"
-           "one-loop pole mixing matrices:\n"
+           "pole mass mixing matrices:\n"
            "----------------------------------------\n";
 @printMixingMatrices@
 }
