change threshold corrections on/off switch to loop order choice
The meaning and behavior of the values 0 and 1 is preserved.  Besides
these, higher values are allowed to enable higher loop corrections,
implemented later.

--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -49,7 +49,7 @@ public:
       , precision_goal(1.0e-4)
       , max_iterations(0)
       , beta_loop_order(2)
-      , threshold_corrections(1)
+      , threshold_corrections_loop_order(1)
       , calculate_sm_masses(false) {}
    ~@ModelName@_spectrum_generator() {}
 
@@ -68,7 +68,7 @@ public:
    void set_beta_loop_order(unsigned l) { beta_loop_order = l; }
    void set_max_iterations(unsigned n) { max_iterations = n; }
    void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
-   void set_threshold_corrections(unsigned t) { threshold_corrections = t; }
+   void set_threshold_corrections_loop_order(unsigned t) { threshold_corrections_loop_order = t; }
 
    void run(const QedQcd& oneset, const @ModelName@_input_parameters& input);
    void write_running_couplings(const std::string& filename = "@ModelName@_rge_running.dat") const;
@@ -84,7 +84,7 @@ private:
    double precision_goal; ///< precision goal
    unsigned max_iterations; ///< maximum number of iterations
    unsigned beta_loop_order; ///< beta-function loop order
-   unsigned threshold_corrections; ///< disable/enable threshold corrections
+   unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
    bool calculate_sm_masses; ///< calculate SM pole masses
 };
 
@@ -124,7 +124,7 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    model.set_input_parameters(input);
    model.do_calculate_sm_pole_masses(calculate_sm_masses);
    model.set_loops(beta_loop_order);
-   model.set_thresholds(threshold_corrections);
+   model.set_thresholds(threshold_corrections_loop_order);
 
    @ModelName@_convergence_tester<T> convergence_tester(&model, precision_goal);
    if (max_iterations > 0)
