--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -86,8 +86,8 @@ int main(int argc, const char* argv[])
       spectrum_generator_settings.get(Spectrum_generator_settings::ewsb_loop_order));
    spectrum_generator.set_beta_loop_order(
       spectrum_generator_settings.get(Spectrum_generator_settings::beta_loop_order));
-   spectrum_generator.set_threshold_corrections(
-      spectrum_generator_settings.get(Spectrum_generator_settings::threshold_corrections));
+   spectrum_generator.set_threshold_corrections_loop_order(
+      spectrum_generator_settings.get(Spectrum_generator_settings::threshold_corrections_loop_order));
 
    spectrum_generator.run(oneset, input);
 
