update Softsusy reference

--- a/doc/mainpage.dox.in
+++ b/doc/mainpage.dox.in
@@ -64,6 +64,6 @@ with FlexibleSUSY:
 
  -  SoftSUSY
     [<a href="http://arxiv.org/abs/hep-ph/0104145">CPC 143 (2002) 305-331</a>,
-     <a href="http://arxiv.org/abs/1311.7659">arxiv:1311.7659</a>]
+     <a href="http://arxiv.org/abs/1311.7659">CPC 185 (2014) 2322</a>]
 
 */
