--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -114,12 +114,23 @@ void @ModelName@_slha_io::fill_physical(@ModelName@<T>& model) const
 @readLesHouchesPhyicalParameters@
 }
 
+/**
+ * Stores the model (DR-bar) parameters in the SLHA object.
+ *
+ * @param model model class
+ */
 template <class T>
 void @ModelName@_slha_io::set_model_parameters(const @ModelName@<T>& model)
 {
 @writeSLHAModelParametersBlocks@
 }
 
+/**
+ * Stores the model (DR-bar) parameters, masses and mixing matrices in
+ * the SLHA object.
+ *
+ * @param model model class
+ */
 template <class T>
 void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
 {
