--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -105,7 +105,8 @@ CONVERT_DOS_PATHS := \
 README_FILE := $(ABSBASEDIR)/README
 
 .PHONY:  all allsrc allexec alllib alltest clean-executables \
-	 clean clean-dep depend distclean showbuild tag release
+	 clean clean-dep depend distclean showbuild tag \
+	 release-tag release-head
 
 all:
 ifeq ($(ENABLE_META),yes)
@@ -137,7 +138,6 @@ ifneq ($(MAKECMDGOALS),distclean)
 ifneq ($(MAKECMDGOALS),install-src)
 ifneq ($(MAKECMDGOALS),showbuild)
 ifneq ($(MAKECMDGOALS),tag)
-ifneq ($(MAKECMDGOALS),release)
 ifneq ($(MAKECMDGOALS),depend)
 ifneq ($(MAKECMDGOALS),doc)
 ifeq ($(ENABLE_COMPILE),yes)
@@ -145,6 +145,7 @@ ifeq ($(findstring clean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring distclean-,$(MAKECMDGOALS)),)
 ifeq ($(findstring doc-,$(MAKECMDGOALS)),)
 ifeq ($(findstring pack-,$(MAKECMDGOALS)),)
+ifeq ($(findstring release-,$(MAKECMDGOALS)),)
 -include $(ALLDEP)
 endif
 endif
@@ -245,7 +246,7 @@ showbuild:
 tag:
 	git tag $(FLEXIBLESUSY_TAG)
 
-release:
+release-tag:
 	git archive --worktree-attributes --prefix=$(FLEXIBLESUSY_PKG)/ \
 		--output=$(FLEXIBLESUSY_PKG).tar.gz $(FLEXIBLESUSY_TAG)
 	md5sum $(FLEXIBLESUSY_PKG).tar.gz > $(FLEXIBLESUSY_PKG).tar.gz.md5
