--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -247,9 +247,11 @@ tag:
 	git tag $(FLEXIBLESUSY_TAG)
 
 release-tag:
-	git archive --worktree-attributes --prefix=$(FLEXIBLESUSY_PKG)/ \
+	git archive --worktree-attributes \
+		--prefix=$(FLEXIBLESUSY_PKG)/ \
 		--output=$(FLEXIBLESUSY_PKG).tar.gz $(FLEXIBLESUSY_TAG)
-	md5sum $(FLEXIBLESUSY_PKG).tar.gz > $(FLEXIBLESUSY_PKG).tar.gz.md5
+	md5sum $(FLEXIBLESUSY_PKG).tar.gz \
+		> $(FLEXIBLESUSY_PKG).tar.gz.md5
 
 release-head:
 	$(eval GIT_HEAD_DESCR := $(shell git describe --tags HEAD))
