shorten model package name
To avoid confusion the version number is removed from the package
name, because it is not ensured that the package content corresponds
to the current FS version (there might be modifications from the last
version).

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -19,7 +19,7 @@ SARAH_MODEL  := @MODEL@
 		$(DIR)/@CLASSNAME@_plot_spectrum.gnuplot
 
 @CLASSNAME@_TARBALL := \
-		$(PKGNAME)-$(FLEXIBLESUSY_VERSION)-$(MODNAME).tar.gz
+		$(MODNAME).tar.gz
 
 LIB@CLASSNAME@_SRC :=
 EXE@CLASSNAME@_SRC :=
