--- a/templates/two_scale_convergence_tester.cpp.in
+++ b/templates/two_scale_convergence_tester.cpp.in
@@ -25,11 +25,11 @@
 
 namespace flexiblesusy {
 
-#define OLD1(p) ol->get_##p()
-#define NEW1(p) ne->get_##p()
+#define OLD1(p) ol.get_##p()
+#define NEW1(p) ne.get_##p()
 
-#define OLD(p,i) ol->get_##p()(i)
-#define NEW(p,i) ne->get_##p()(i)
+#define OLD(p,i) ol.get_##p()(i)
+#define NEW(p,i) ne.get_##p()(i)
 
 @ModelName@_convergence_tester<Two_scale>::@ModelName@_convergence_tester(@ModelName@<Two_scale>* model, double accuracy_goal)
    : Convergence_tester_DRbar<@ModelName@<Two_scale> >(model, accuracy_goal)
@@ -42,8 +42,8 @@ namespace flexiblesusy {
 
 double @ModelName@_convergence_tester<Two_scale>::max_rel_diff() const
 {
-   const @ModelName@<Two_scale>* ol = get_last_iteration_model();
-   const @ModelName@<Two_scale>* ne = get_model();
+   const @ModelName@<Two_scale>& ol = get_last_iteration_model();
+   const @ModelName@<Two_scale>& ne = get_model();
 
 @compareFunction@
 }
