--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -5,7 +5,7 @@ FSModelName = "@CLASSNAME@";
 
 MINPAR={ {1, LambdaIN} };
 
-EWSBOutputParameters = { Mu2 };
+EWSBOutputParameters = { mu2 };
 
 BoundaryLowScaleInput = {
     {v, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2]},
