remove DependenceNum from Lambda coupling in the SM

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -13,3 +13,8 @@ BoundaryLowScaleInput = {
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
+
+SARAH`ParameterDefinitions = Append[
+    Cases[SARAH`ParameterDefinitions, {p_ /; p =!= SARAH`\[Lambda], ___}],
+    {SARAH`\[Lambda], { Description -> "SM Higgs Selfcouplings" } }
+];
