--- a/templates/scan.cpp.in
+++ b/templates/scan.cpp.in
@@ -47,7 +47,7 @@ int main()
 
    cout << "# "
         << std::setw(12) << std::left << "@InputParameter_1@" << ' '
-        << std::setw(12) << std::left << "M@HiggsBoson@(1)/GeV" << ' '
+        << std::setw(12) << std::left << "M@HiggsBoson_1@/GeV" << ' '
         << std::setw(12) << std::left << "error"
         << '\n';
 
@@ -61,7 +61,7 @@ int main()
       const @ModelName@_physical& pole_masses = model.get_physical();
       const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems
          = spectrum_generator.get_problems();
-      const double higgs = pole_masses.M@HiggsBoson@(0);
+      const double higgs = pole_masses.M@HiggsBoson_1@;
       const bool error = problems.have_serious_problem();
 
       cout << "  "
